fix: resolve warnings